--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FeelTheWarm",
+  "name": "feelthewarm",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://TheMainOne.github.io/FeelTheWarm",
