--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "gh-pages": "^4.0.0",
+    "i18next": "^21.8.14",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-i18next": "^11.18.3",
     "react-image-gallery": "^1.2.8",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
