--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.18.3",
     "react-image-gallery": "^1.2.8",
+    "react-resize-aware": "^3.1.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "simplelightbox": "^2.10.3",
